--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+  <!-- IMPORTANT: Mobile responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!-- NAVIGATION -->
 <nav>
   <a href="index.html" class="active">Home</a>
