--- a/products.html
+++ b/products.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+<!-- IMPORTANT: Mobile responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 <nav>
   <a href="index.html">Home</a>
   <a href="products.html" class="active">Products</a>
@@ -170,3 +173,4 @@ function addToCart(name, price, image) {
 
 </body>
 </html>
+
