--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<!-- IMPORTANT: Mobile responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Cart</title>
   <link rel="stylesheet" href="style.css">
   <style>
@@ -263,3 +267,4 @@ loadCart();
 
 </body>
 </html>
+
