--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+    <!-- IMPORTANT: Mobile responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <nav>
   <a href="index.html">Home</a>
@@ -42,3 +45,4 @@
 
 </body>
 </html>
+
