--- a/cart.html
+++ b/cart.html
@@ -1,127 +1,140 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<!-- IMPORTANT: Mobile responsive -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <title>Cart</title>
+
+  <!-- IMPORTANT: Mobile responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="style.css">
+
   <style>
-    /* Checkout button */
+    /* Cart container */
+    .cart-container {
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 20px;
+    }
+
+    .cart-item {
+      border: 2px solid #ff1a1a;
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 6px #ff3333;
+    }
+
+    .qty-box {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      margin: 10px 0;
+    }
+
+    .qty-box button {
+      background: #ff1a1a;
+      color: #000;
+      border: none;
+      padding: 5px 12px;
+      font-weight: bold;
+      border-radius: 6px;
+      cursor: pointer;
+      box-shadow: 0 0 5px #ff3333;
+    }
+
+    .remove-btn {
+      background: #ff1a1a;
+      border: none;
+      padding: 6px 15px;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 0 5px #ff3333;
+    }
+
     #checkout-btn {
       display: block;
-      margin: 20px auto;
-      padding: 10px 20px;
+      margin: 25px auto;
+      padding: 12px 25px;
+      background: #ff1a1a;
+      color: #000;
+      border: none;
+      border-radius: 8px;
       font-weight: bold;
-      background-color: red !important;
-      color: white !important;
-      border: none;
-      border-radius: 5px;
+      box-shadow: 0 0 8px #ff3333;
       cursor: pointer;
     }
-    #checkout-btn:hover {
-      background-color: darkred !important;
-    }
 
-    /* Cart item buttons */
-    .cart-item button {
-      background-color: red !important;
-      color: white !important;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin: 2px;
-      padding: 5px 10px;
-    }
-    .cart-item button:hover {
-      background-color: darkred !important;
-    }
-
-    /* Total price color */
     #total {
-      color: red !important;
-      font-weight: bold;
       text-align: center;
-      margin-top: 15px;
+      font-size: 20px;
+      font-weight: bold;
+      margin-top: 20px;
+      color: #ff1a1a;
     }
 
-    /* Modal Styles */
+    /* Checkout modal */
     .modal {
       display: none;
       position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.7);
+      inset: 0;
+      background: rgba(0,0,0,0.7);
+      z-index: 999;
     }
 
     .modal-content {
-      background-color: #111;
+      background: #111;
+      max-width: 500px;
       margin: 10% auto;
       padding: 20px;
-      border: 2px solid red;
       border-radius: 10px;
-      width: 90%;
-      max-width: 500px;
-      color: white;
-    }
-
-    .modal-content h2 {
-      text-align: center;
-      color: red;
-      margin-bottom: 20px;
-    }
-
-    .modal-content label {
-      display: block;
-      margin-top: 10px;
-      font-weight: bold;
+      border: 2px solid #ff1a1a;
     }
 
     .modal-content input,
     .modal-content textarea {
       width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border-radius: 5px;
-      border: 1px solid red;
-      background-color: #222;
-      color: white;
+      padding: 10px;
+      margin-top: 8px;
+      background: #222;
+      color: #fff;
+      border: 1px solid #ff1a1a;
+      border-radius: 6px;
     }
 
-    .modal-content button {
-      margin-top: 15px;
-      padding: 10px 15px;
+    .place-order {
+      background: #ff1a1a;
       border: none;
-      border-radius: 5px;
+      padding: 10px;
+      width: 100%;
+      margin-top: 15px;
       font-weight: bold;
+      border-radius: 6px;
       cursor: pointer;
     }
 
-    .modal-content .place-order {
-      background-color: red;
-      color: white;
-    }
+    /* MOBILE FRIENDLY */
+    @media (max-width: 768px) {
+      .cart-container {
+        padding: 10px;
+      }
 
-    .modal-content .place-order:hover {
-      background-color: darkred;
-    }
+      .cart-item {
+        text-align: center;
+      }
 
-    .modal-content .cancel {
-      background-color: #555;
-      color: white;
-      margin-left: 10px;
-    }
+      .qty-box {
+        justify-content: center;
+      }
 
-    .modal-content .cancel:hover {
-      background-color: #333;
+      #checkout-btn {
+        width: 100%;
+      }
     }
   </style>
 </head>
+
 <body>
 
 <nav>
@@ -138,128 +151,97 @@
   <button id="checkout-btn" onclick="showCheckout()">Checkout</button>
 </div>
 
-<!-- Modal Checkout -->
+<!-- CHECKOUT MODAL -->
 <div id="checkout-modal" class="modal">
   <div class="modal-content">
-    <h2>Checkout Information</h2>
-    <form id="checkout-form">
-      <label>Name:</label>
-      <input type="text" id="name" required>
+    <h2>Checkout</h2>
 
-      <label>Address:</label>
-      <textarea id="address" required></textarea>
+    <input type="text" id="name" placeholder="Your Name" required>
+    <input type="text" id="phone" placeholder="Phone Number" required>
+    <textarea id="address" placeholder="Delivery Address" required></textarea>
 
-      <label>Phone:</label>
-      <input type="text" id="phone" required>
+    <!-- ONLY ONE instruction field -->
+    <textarea id="instructions" placeholder="Neon color, font style, size, other instructions"></textarea>
 
-      <label>Email:</label>
-      <input type="email" id="email">
-
-      <button type="submit" class="place-order">Place Order</button>
-      <button type="button" class="cancel" onclick="closeCheckout()">Cancel</button>
-    </form>
+    <button class="place-order" onclick="placeOrder()">Place Order</button>
   </div>
 </div>
 
 <script>
 function loadCart() {
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
-    let cartContainer = document.getElementById("cart-items");
-    let totalPriceEl = document.getElementById("total");
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  let cartBox = document.getElementById("cart-items");
+  let totalEl = document.getElementById("total");
 
-    cartContainer.innerHTML = "";
+  cartBox.innerHTML = "";
+  let total = 0;
 
-    if (cart.length === 0) {
-        cartContainer.innerHTML = "<p>Your cart is empty.</p>";
-        totalPriceEl.textContent = "Total: ₨ 0";
-        document.getElementById("checkout-btn").style.display = "none";
-        return;
+  if (cart.length === 0) {
+    cartBox.innerHTML = "<p>Your cart is empty.</p>";
+    totalEl.innerHTML = "Total: ₨ 0";
+    document.getElementById("checkout-btn").style.display = "none";
+    return;
+  }
+
+  document.getElementById("checkout-btn").style.display = "block";
+
+  cart.forEach((item, index) => {
+
+    // ✅ FIX UNDEFINED QUANTITY
+    if (!item.quantity || item.quantity < 1) {
+      item.quantity = 1;
     }
 
-    document.getElementById("checkout-btn").style.display = "block";
+    let itemTotal = item.price * item.quantity;
+    total += itemTotal;
 
-    let totalPrice = 0;
-    let cartHTML = "";
+    cartBox.innerHTML += `
+      <div class="cart-item">
+        <h3>${item.name}</h3>
+        <p>₨ ${item.price}</p>
 
-    cart.forEach((item, index) => {
-        // Ensure price and quantity are numbers
-        let price = Number(item.price) || 0;
-        let quantity = Number(item.quantity) || 0;
-        let itemTotal = price * quantity;
-        totalPrice += itemTotal;
+        <div class="qty-box">
+          <button onclick="updateQty(${index}, -1)">−</button>
+          <span>${item.quantity}</span>
+          <button onclick="updateQty(${index}, 1)">+</button>
+        </div>
 
-        cartHTML += `
-            <div class="cart-item">
-                <div class="cart-info">
-                    <h4>${item.name}</h4>
-                    <p>₨ ${price}</p>
-                    <div class="qty-box">
-                        <button onclick="changeQty(${index}, -1)">-</button>
-                        <span>${quantity}</span>
-                        <button onclick="changeQty(${index}, 1)">+</button>
-                    </div>
-                </div>
-                <p class="item-total">₨ ${itemTotal}</p>
-                <button onclick="removeItem(${index})">Remove</button>
-            </div>
-        `;
-    });
+        <p><strong>₨ ${itemTotal}</strong></p>
+        <button class="remove-btn" onclick="removeItem(${index})">Remove</button>
+      </div>
+    `;
+  });
 
-    cartContainer.innerHTML = cartHTML;
-    totalPriceEl.textContent = "Total: ₨ " + totalPrice;
+  totalEl.innerHTML = "Total: ₨ " + total;
+  localStorage.setItem("cart", JSON.stringify(cart));
 }
 
-function changeQty(index, change) {
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
-    cart[index].quantity = Number(cart[index].quantity) || 0;
-    cart[index].quantity += change;
+function updateQty(i, change) {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart[i].quantity += change;
 
-    if (cart[index].quantity <= 0) {
-        cart.splice(index, 1);
-    }
+  if (cart[i].quantity < 1) cart[i].quantity = 1;
 
-    localStorage.setItem("cart", JSON.stringify(cart));
-    loadCart();
+  localStorage.setItem("cart", JSON.stringify(cart));
+  loadCart();
 }
 
-function removeItem(index) {
-    let cart = JSON.parse(localStorage.getItem("cart")) || [];
-    cart.splice(index, 1);
-    localStorage.setItem("cart", JSON.stringify(cart));
-    loadCart();
+function removeItem(i) {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  cart.splice(i, 1);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  loadCart();
 }
 
-// Show modal
 function showCheckout() {
-    document.getElementById("checkout-modal").style.display = "block";
+  document.getElementById("checkout-modal").style.display = "block";
 }
 
-// Close modal
-function closeCheckout() {
-    document.getElementById("checkout-modal").style.display = "none";
-}
-
-// Submit order
-document.getElementById("checkout-form").addEventListener("submit", function(e) {
-    e.preventDefault();
-    
-    let name = document.getElementById("name").value;
-    let address = document.getElementById("address").value;
-    let phone = document.getElementById("phone").value;
-    let email = document.getElementById("email").value;
-
-    alert(`Thank you, ${name}! Your order has been placed.`);
-    localStorage.removeItem("cart");
-    loadCart();
-    closeCheckout();
-});
-
-// Close modal if click outside content
-window.onclick = function(event) {
-    let modal = document.getElementById("checkout-modal");
-    if (event.target == modal) {
-        closeCheckout();
-    }
+function placeOrder() {
+  alert("Order placed successfully!");
+  localStorage.removeItem("cart");
+  loadCart();
+  document.getElementById("checkout-modal").style.display = "none";
 }
 
 loadCart();
@@ -267,4 +249,3 @@ loadCart();
 
 </body>
 </html>
-
