--- a/cart.html
+++ b/cart.html
@@ -1,136 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Cart</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Cart</title>
 
-  <link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body{background:#000;color:#fff;font-family:Arial}
+<link rel="stylesheet" href="style.css">
 
-    .cart-container{
-      max-width:900px;
-      margin:20px auto;
-      padding:15px;
-    }
+<style>
+body {
+  background:#000;
+  color:#fff;
+  font-family: Arial, sans-serif;
+}
 
-    h1{text-align:center;color:#ff1a1a}
+.cart-container {
+  max-width: 900px;
+  margin: 30px auto;
+  padding: 15px;
+}
 
-    .cart-item{
-      border:2px solid #ff1a1a;
-      border-radius:14px;
-      padding:15px;
-      margin-bottom:18px;
-      box-shadow:0 0 10px #ff1a1a;
-      text-align:center;
-    }
+h1 {
+  text-align:center;
+  color:red;
+  text-shadow:0 0 10px red;
+}
 
-    .qty-box{
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      gap:18px;
-      margin:12px 0;
-    }
+.cart-item {
+  border:2px solid red;
+  border-radius:15px;
+  padding:20px;
+  margin-bottom:20px;
+  text-align:center;
+  box-shadow:0 0 12px red;
+}
 
-    .qty-box button{
-      background:#ff1a1a;
-      border:none;
-      padding:10px 18px;
-      border-radius:8px;
-      font-size:18px;
-      font-weight:bold;
-      cursor:pointer;
-    }
+.cart-item h3 {
+  color:red;
+}
 
-    .remove-btn{
-      background:#ff1a1a;
-      border:none;
-      padding:8px 20px;
-      border-radius:8px;
-      font-weight:bold;
-      cursor:pointer;
-      margin-top:10px;
-    }
+.qty-box {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  gap:20px;
+  margin:15px 0;
+}
 
-    #total{
-      text-align:center;
-      font-size:22px;
-      margin:20px 0;
-      color:#ff1a1a;
-    }
+.qty-box button {
+  width:45px;
+  height:40px;
+  background:red;
+  border:none;
+  border-radius:8px;
+  font-size:20px;
+  font-weight:bold;
+  cursor:pointer;
+}
 
-    #checkout-btn{
-      display:block;
-      margin:0 auto;
-      padding:14px 35px;
-      background:#ff1a1a;
-      border:none;
-      border-radius:12px;
-      font-weight:bold;
-      cursor:pointer;
-      box-shadow:0 0 10px #ff1a1a;
-    }
+.remove-btn {
+  background:red;
+  border:none;
+  padding:8px 25px;
+  border-radius:8px;
+  font-weight:bold;
+  cursor:pointer;
+  margin-top:10px;
+}
 
-    /* MODAL */
-    .modal{
-      display:none;
-      position:fixed;
-      inset:0;
-      background:rgba(0,0,0,0.85);
-      z-index:999;
-      padding:10px;
-    }
+#total {
+  text-align:center;
+  font-size:22px;
+  font-weight:bold;
+  color:red;
+  margin:20px 0;
+}
 
-    .modal-content{
-      background:#111;
-      max-width:420px;
-      width:100%;
-      margin:auto;
-      padding:22px;
-      border-radius:16px;
-      border:2px solid #ff1a1a;
-      box-shadow:0 0 15px #ff1a1a;
-    }
+#checkout-btn {
+  display:block;
+  width:90%;
+  max-width:400px;
+  margin:20px auto;
+  padding:14px;
+  background:red;
+  border:none;
+  border-radius:12px;
+  font-size:18px;
+  font-weight:bold;
+  cursor:pointer;
+  box-shadow:0 0 12px red;
+}
 
-    .modal-content h2{
-      text-align:center;
-      color:#ff1a1a;
-      margin-bottom:15px;
-    }
+/* WHATSAPP BUTTON */
+.whatsapp-btn {
+  width:90%;
+  max-width:500px;
+  padding:14px;
+  background:#25D366;
+  color:#000;
+  border:none;
+  border-radius:12px;
+  font-size:16px;
+  font-weight:bold;
+  cursor:pointer;
+  box-shadow:0 0 12px rgba(37,211,102,0.6);
+  margin:15px auto 40px auto;
+  display:block;
+}
 
-    .modal-content input,
-    .modal-content textarea{
-      width:100%;
-      padding:12px;
-      margin-top:10px;
-      background:#222;
-      color:#fff;
-      border:1px solid #ff1a1a;
-      border-radius:10px;
-    }
+/* MODAL */
+.modal {
+  display:none;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.8);
+  z-index:1000;
+}
 
-    .place-order,
-    .whatsapp-btn{
-      margin-top:12px;
-      width:100%;
-      padding:12px;
-      border:none;
-      border-radius:10px;
-      font-weight:bold;
-      cursor:pointer;
-    }
+.modal-content {
+  background:#111;
+  max-width:500px;
+  margin:8% auto;
+  padding:20px;
+  border-radius:15px;
+  border:2px solid red;
+  box-shadow:0 0 15px red;
+}
 
-    .place-order{background:#ff1a1a}
-    .whatsapp-btn{background:#25D366;color:#000}
+.modal-content h2 {
+  text-align:center;
+  color:red;
+}
 
-    @media(max-width:600px){
-      h1{font-size:22px}
-      #checkout-btn{width:100%}
-    }
-  </style>
+.modal-content input,
+.modal-content textarea {
+  width:100%;
+  padding:12px;
+  margin-top:10px;
+  background:#222;
+  border:1px solid red;
+  border-radius:8px;
+  color:white;
+}
+
+.place-order {
+  width:100%;
+  padding:14px;
+  background:red;
+  border:none;
+  border-radius:12px;
+  font-size:18px;
+  font-weight:bold;
+  cursor:pointer;
+  margin-top:15px;
+}
+
+/* MOBILE FIX */
+@media (max-width:600px) {
+  .qty-box {
+    gap:12px;
+  }
+}
+</style>
 </head>
 
 <body>
@@ -144,20 +176,27 @@
 
 <div class="cart-container">
   <h1>Your Cart</h1>
+
   <div id="cart-items"></div>
-  <div id="total">Total: ₨ 0</div>
+
+  <div id="total">Total: Rs 0</div>
+
   <button id="checkout-btn" onclick="openCheckout()">Checkout</button>
+
+  <!-- WhatsApp Button -->
+  <button class="whatsapp-btn" onclick="sendWhatsApp()">Send Order on WhatsApp</button>
 </div>
 
-<!-- CHECKOUT -->
+<!-- CHECKOUT MODAL -->
 <div class="modal" id="checkoutModal">
   <div class="modal-content">
     <h2>Checkout</h2>
 
     <form id="orderForm" action="https://api.web3forms.com/submit" method="POST">
+
       <input type="hidden" name="access_key" value="41466539-4bd3-4013-8536-d1e59d78d0f0">
-      <input type="hidden" name="subject" value="New Neon Order">
-      <input type="hidden" name="cart_details" id="cartDetails">
+      <input type="hidden" name="subject" value="New Neon Sign Order">
+      <input type="hidden" name="from_name" value="Modern Neon Sign">
 
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
@@ -165,82 +204,97 @@
       <textarea name="address" placeholder="Delivery Address" required></textarea>
       <textarea name="instructions" placeholder="Neon color, font, size, other instructions"></textarea>
 
-      <button class="place-order" type="submit">Place Order</button>
-    </form>
+      <textarea name="order_details" id="orderDetails" hidden></textarea>
 
-    <button class="whatsapp-btn" onclick="sendWhatsApp()">Send Order on WhatsApp</button>
+      <button type="submit" class="place-order">Place Order</button>
+    </form>
   </div>
 </div>
 
 <script>
-function loadCart(){
+function loadCart() {
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   let box = document.getElementById("cart-items");
   let totalEl = document.getElementById("total");
-  box.innerHTML="";
-  let total=0;
 
-  if(cart.length===0){
-    box.innerHTML="<p>Your cart is empty.</p>";
-    document.getElementById("checkout-btn").style.display="none";
+  box.innerHTML = "";
+  let total = 0;
+
+  if (cart.length === 0) {
+    box.innerHTML = "<p style='text-align:center'>Your cart is empty.</p>";
+    document.getElementById("checkout-btn").style.display = "none";
     return;
   }
 
-  document.getElementById("checkout-btn").style.display="block";
+  document.getElementById("checkout-btn").style.display = "block";
 
-  cart.forEach((item,i)=>{
-    if(!item.name) item.name="Custom Neon";
-    if(!item.quantity) item.quantity=1;
+  cart.forEach((item, i) => {
+    if (!item.quantity || item.quantity < 1) item.quantity = 1;
 
-    let price=item.price*item.quantity;
-    total+=price;
+    let itemTotal = item.price * item.quantity;
+    total += itemTotal;
 
-    box.innerHTML+=`
+    box.innerHTML += `
       <div class="cart-item">
         <h3>${item.name}</h3>
-        <p>₨ ${item.price}</p>
+        <p>Rs ${item.price}</p>
+
         <div class="qty-box">
-          <button onclick="qty(${i},-1)">−</button>
+          <button onclick="changeQty(${i},-1)">-</button>
           <span>${item.quantity}</span>
-          <button onclick="qty(${i},1)">+</button>
+          <button onclick="changeQty(${i},1)">+</button>
         </div>
-        <p><strong>₨ ${price}</strong></p>
+
+        <p><strong>Rs ${itemTotal}</strong></p>
         <button class="remove-btn" onclick="removeItem(${i})">Remove</button>
-      </div>`;
+      </div>
+    `;
   });
 
-  totalEl.innerHTML="Total: ₨ "+total;
-  localStorage.setItem("cart",JSON.stringify(cart));
+  totalEl.innerHTML = "Total: Rs " + total;
+  localStorage.setItem("cart", JSON.stringify(cart));
 }
 
-function qty(i,c){
-  let cart=JSON.parse(localStorage.getItem("cart"));
-  cart[i].quantity+=c;
-  if(cart[i].quantity<1) cart[i].quantity=1;
-  localStorage.setItem("cart",JSON.stringify(cart));
+function changeQty(i, v) {
+  let cart = JSON.parse(localStorage.getItem("cart"));
+  cart[i].quantity += v;
+  if (cart[i].quantity < 1) cart[i].quantity = 1;
+  localStorage.setItem("cart", JSON.stringify(cart));
   loadCart();
 }
 
-function removeItem(i){
-  let cart=JSON.parse(localStorage.getItem("cart"));
+function removeItem(i) {
+  let cart = JSON.parse(localStorage.getItem("cart"));
   cart.splice(i,1);
-  localStorage.setItem("cart",JSON.stringify(cart));
+  localStorage.setItem("cart", JSON.stringify(cart));
   loadCart();
 }
 
-function openCheckout(){
-  document.getElementById("checkoutModal").style.display="flex";
-  document.getElementById("cartDetails").value =
-    JSON.stringify(JSON.parse(localStorage.getItem("cart")));
+function openCheckout() {
+  document.getElementById("checkoutModal").style.display = "block";
+  prepareOrderDetails();
 }
 
-function sendWhatsApp(){
-  let cart=JSON.parse(localStorage.getItem("cart"))||[];
-  let msg="New Neon Order:%0A";
-  cart.forEach(i=>{
-    msg+=`${i.name} x ${i.quantity} = Rs ${i.price*i.quantity}%0A`;
+function prepareOrderDetails() {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  let details = "";
+
+  cart.forEach(item => {
+    details += `${item.name} | Qty: ${item.quantity} | Rs ${item.price}\n`;
   });
-  window.open(`https://wa.me/923000767300?text=${msg}`,"_blank");
+
+  document.getElementById("orderDetails").value = details;
+}
+
+function sendWhatsApp() {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  let msg = "New Neon Sign Order:%0A";
+
+  cart.forEach(item => {
+    msg += `${item.name} x ${item.quantity} = Rs ${item.price * item.quantity}%0A`;
+  });
+
+  window.open(`https://wa.me/923000767300?text=${msg}`, "_blank");
 }
 
 loadCart();
